--- a/app_web/static/css/admin_base.css
+++ b/app_web/static/css/admin_base.css
@@ -34,6 +34,7 @@ body {
     color: white;
     font-size: 15px;
     font-weight: 500;
+    margin-bottom: 5px;
 }
 .nav-section nav div i {
     margin-right: 10px;
