--- a/app_web/static/css/admin_customer.css
+++ b/app_web/static/css/admin_customer.css
@@ -35,6 +35,60 @@
     border-bottom: 2px solid black;
     animation: link-underline 0.5s forwards;
 }
+/*-----------------------------  */
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(67, 60, 60, 0.5);
+}
+.container-info {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    width: 40%;
+    height: 50%;
+    border-radius: 10px;
+    padding: 20px;
+    overflow-y: auto;
+}
+.container-info label {
+    font-size: 15px;
+    font-weight: 700;
+    color: #000;
+}
+.container-info input {
+    width: 100%;
+    height: 30px;
+    border: 1px solid #000;
+    border-radius: 5px;
+    padding: 0 10px;
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+.button {
+    background-color: rgb(49, 98, 203);
+    color: #fff;
+    text-align: center;
+    padding: 15px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 17px;
+    font-weight: 700;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+/*  ---------------------------------*/
+
 @keyframes link-underline {
     from {
         width: 0%;
@@ -85,4 +139,10 @@ td a:hover {
 
 tr:nth-child(even) {
     background-color: #f2f2f2;
+}
+
+#nav_user {
+    background-color: rgb(49, 98, 203);
+    border-radius: 5px;
+    cursor: pointer;
 }
