--- a/app_web/static/css/admin_customer_order.css
+++ b/app_web/static/css/admin_customer_order.css
@@ -49,18 +49,9 @@ table, th, td {
     border-collapse:collapse;
     padding: 10px;
 }
-.table {
-    display: block;
-    width: 100%;
-    height: 400px;
-    overflow-y: auto;
-}
 table {
+    margin-top: 10px;
     width: 100%;
-}
-table thead th {
-    position: sticky;
-    top: 0;
 }
 th {
     background-color: rgb(49, 98, 203);
@@ -78,12 +69,12 @@ td img {
 td:first-child {
     width: 10%;
 }
-td:last-child, td:nth-last-child(2), td:nth-last-child(3) {
+td:last-child {
     text-align: center;
     font-size: 20px;
     width: 10%;
 }
-td:nth-last-child(4) {
+td:nth-last-child(2) {
     text-align: right;
 }
 td a {
@@ -153,6 +144,35 @@ tr:nth-child(even) {
     flex-direction: column;
 
 }
+td:nth-last-child(2) img {
+    height: 15px;
+    margin-right: 5px;
+}
+td:nth-last-child(3) {
+    text-align: right;
+}
+td .status-confirm {
+    display: flex;
+    justify-content: right;
+    font-size: 12px;
+    font-weight: 700;
+    color: rgb(11, 152, 33);
+}
+td .status-cancel {
+    display: flex;
+    justify-content: right;
+    font-size: 12px;
+    font-weight: 700;
+    color: red;
+}
+td .status-wait {
+    display: flex;
+    justify-content: right;
+    font-size: 12px;
+    font-weight: 700;
+    color: rgb(252, 206, 3);
+}
+
 .header-product {
     display: flex;
     justify-content: space-between;
@@ -239,7 +259,7 @@ tr:nth-child(even) {
     margin-right: 10px;    
 }
 
-#nav_order {
+#nav_user {
     background-color: rgb(49, 98, 203);
     border-radius: 5px;
     cursor: pointer;
