--- a/app_web/templates/login.html
+++ b/app_web/templates/login.html
@@ -11,15 +11,16 @@
 
 {% block content %}
 <main>
-    <form class="register-frm" id="login-frm-otp" action="{% url 'user_login' %}" method="post">
+    <form class="register-frm" id="login-frm-otp" action="{% url 'checklogin' %}" method="post">
         {% csrf_token %}
         <input type="hidden" name="next" value="{{ request.GET.next }}">
-        <p class="text">Vui lòng<br>đăng nhập tài khoản của bạn</p>
+        <p class="text"><b>Đăng nhập tài khoản</b></p>
         <div class="input-group">
-            <input id="username" maxlength="20" name="username" onkeypress="return isNumberKey(event);" placeholder="Nhập tên tài khoản" type="text" value="">
+            <input id="username" maxlength="20" name="username" placeholder="Nhập tên tài khoản" type="text" value="">
             <input type="password" id="password" name="password" placeholder="Nhập mật khẩu">
         </div>
-        <button type="submit" class="submitbtn">Tiếp tục</button>
+        <span class="error-notifi">{{message}}</span>
+        <button type="submit" class="submitbtn">Đăng nhập</button>
         <div class="under-form"><span>Chưa có tài khoản?</span><a href="/check_register/">Đăng ký</a></div>
         <div class="noti">
             <div class="error-lst"></div>
