--- a/app_web/templates/order.html
+++ b/app_web/templates/order.html
@@ -18,22 +18,22 @@
         <form action="{% url 'order' %}" method="post">
             {% csrf_token %}
             <label for="name">Họ và tên</label>
-            <input type="text" id="name" name="name" value="{{customer.name}}">
+            <input type="text" id="name" name="name" value="{{customer.name}}" required>
             <label for="phone">Số điện thoại</label>
-            <input type="text" id="phone" name="phone" value="{{customer.phone}}">
+            <input type="text" id="phone" name="phone" value="{{customer.phone}}" required>
             <label for="address">Địa chỉ</label>
-            <input type="text" id="address" name="address" value="{{customer.address}}">
+            <input type="text" id="address" name="address" value="{{customer.address}}" required>
             <input type="hidden" id="cart_id" name="cart_name">
             <input type="submit" id="submit_form" class="submit-order" value="Xác nhận mua" onclick="done_submit()">
         </form>
     </div>
 </main>
 
-<div class="thongtinhoadon">
+<!-- <div class="thongtinhoadon">
     <div class="title-hoadon">
         <p>THÔNG TIN HOÁ ĐƠN</p>
     </div>
-    <!-- <div class="result">
+    <div class="result">
         <div class="label">
             <p>Tổng tiền:</p>
         </div>
